added filter, fixed cart, styles

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
       href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>mytheresa_vuex-movie-searcher</title>
+    <title>Vuex-movie-searcher</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but mytheresa_vuex-movie-searcher doesn't work properly
-        without JavaScript enabled. Please enable it to continue.</strong
+        >We're sorry but Vuex-movie-searcher doesn't work properly without
+        JavaScript enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
